# ol

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
cmake/: EmbedResources.cmake
docs/: architecture.md  incomplete.md
res/: pathtrace_comparison.frag  radiance_cascade.frag  surface_lighting.frag  surface_shadow_composite.frag
src/demo/: demo.cpp  demo.h  main.cpp  menu.cpp  menu.h
src/engine/: arena.h  base.h  math.h  net.cpp  net.h  physics.cpp  physics.h  player_controller.cpp  player_controller.h  render.cpp  render.h  world.cpp  world.h
src/util/: embedfile.c
tests/: engine_tests.cpp
